--- a/Arduino/Sketchs/NANO_MPU6050_aceleracion_giroscopio/platformio.ini
+++ b/Arduino/Sketchs/NANO_MPU6050_aceleracion_giroscopio/platformio.ini
@@ -12,4 +12,7 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = jrowberg/I2Cdevlib-MPU6050@^1.0.0
+upload_port = /dev/ttyUSB0
+monitor_speed = 9600
+
+lib_deps = https://github.com/jarzebski/Arduino-MPU6050.git
